syntax = "proto3";

package gs.ext.service.permission;

import "konekko.me/gosion/commons/dto/commons.proto";

service Accessible {

    rpc Check (CheckRequest) returns (gs.commons.dto.Status);

}

message CheckRequest {
    repeated string functionRoles = 1;
    string userId = 2;
    string structureId = 3;
}
